# tokyodystopia-haskell

./: README  Test.hs  tests.hs  tokyodystopia-haskell.cabal
Database/: TokyoDystopia.hs
Database/TokyoDystopia/: Class.hs  FFI.hs  IDB.hs  Internal.hs  JDB.hs  QDB.hs  Utils.hs  WDB.hs
Database/TokyoDystopia/FFI/: IDB.hsc  JDB.hsc  QDB.hsc  WDB.hsc
src/Database/: TokyoDystopia.hs
src/Database/TokyoDystopia/: Class.hs  Internal.hs  QDB.hs  Utils.hs
