name:		tokyodystopia-haskell
version:	0.0.3
synopsis:       Haskell binding of Tokyo Dystopia.
author:         8c6794b6
maintainer:     8c6794b6@gmail.com
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
category:       Database
stability:      experimental
description:
  Haskell binding for Tokyo Dystopia full text searching library.

-- test-suite main-tests
--   type:
--     exitcode-stdio-1.0
--   extra-libraries:
--     tokyodystopia
--   main-is:
--     tests.hs

library
  ghc-options:
    -O2 -Wall -fno-warn-unused-do-bind
  exposed-modules:
    Database.TokyoDystopia
    Database.TokyoDystopia.Class
    Database.TokyoDystopia.JDB
    Database.TokyoDystopia.IDB
    Database.TokyoDystopia.QDB
    Database.TokyoDystopia.WDB
    Database.TokyoDystopia.Utils
    Database.TokyoDystopia.Types
    Database.TokyoDystopia.FFI
    Database.TokyoDystopia.FFI.IDB
    Database.TokyoDystopia.FFI.JDB
    Database.TokyoDystopia.FFI.QDB
    Database.TokyoDystopia.FFI.WDB
  other-modules:
    Database.TokyoDystopia.Internal
  extra-libraries:
    tokyodystopia
  build-depends:
    base == 4.*,
    bytestring >= 0.9.1.7,
    mtl >= 2.0.0,
    time >= 1.1.4,
    tokyocabinet-haskell >= 0.0.5
